<resources>
    <string name="app_name">BestErp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_product">ProductActivity</string>


    <!--icon-->
    <string name="icon_stock">&#xe600;</string>
    <string name="icon_search">&#xe601;</string>
    <string name="icon_sale">&#xe602;</string>
    <string name="icon_custom">&#xe603;</string>
    <string name="icon_report">&#xe604;</string>
    <string name="icon_product">&#xe605;</string>
    <string name="icon_purchase">&#xe606;</string>
    <string name="title_activity_account_sales">AccountSalesActivity</string>
    <string name="title_activity_search_product">SearchProductActivity</string>
    <string name="title_activity_custom">CustomActivity</string>
    <string name="sale_title_name_product">商品名称</string>
    <string name="sale_title_name_standard">规格</string>
    <string name="sale_title_name_util">单位</string>
    <string name="sale_title_name_number">数量</string>
    <string name="sale_title_name_price">单价</string>
    <string name="sale_title_name_total">金额</string>
    <string name="action_edit">修改</string>
    <string name="action_add">添加</string>
    <string name="title_activity_add_account_sales">AddAccountSalesActivity</string>
    <string name="hint_account_price">请输入单价</string>
    <string name="hint_account_number">请输入数量</string>
    <string name="hint_account_total">自动计算金额</string>
    <string name="select_product">选择商品</string>
    <string name="loading_text">正在加载...</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="title_activity_product_detailctivity">ProductDetailctivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hint_product_add_name">请输入商品名称</string>
    <string name="hint_product_add_util">请输入商品单位</string>
    <string name="add_product_btn">添加商品</string>
    <string name="hint_product_add_standard">请输入商品规格</string>

</resources>
