<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">




        <!-- 商品，名称 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_add_name"
                android:inputType="text"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <!-- 商品单位 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_util_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/product_util"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_add_util"
                android:inputType="text"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <!-- 商品规格 -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/product_standard_layout"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/product_standard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_product_add_standard"
                    android:inputType="text"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:layout_gravity="bottom"
                android:id="@+id/add_product_standard"
                android:layout_width="wrap_content"
                android:text="添加规格"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <me.next.tagview.TagCloudView
            android:id="@+id/product_tag_cloud_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:tcvItemBorderHorizontal="8dp"
            app:tcvItemBorderVertical="6dp"
            app:tcvTextColor="#fff"
            app:tcvSingleLine="false"
            app:tcvCanTagClick="true"
            app:tcvTagResId="@layout/item_product_tag_style"

            app:tcvBorder="6dp"
            />



        <Button
            android:id="@+id/product_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_product_btn" />

    </LinearLayout>




</LinearLayout>