<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="besterp.sherlock221b.com.besterp.ui.activity.account.AddAccountSalesActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <Button
                android:id="@+id/btn_select_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_product"
                />

        </LinearLayout>



        <!-- 单价 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/price_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_account_price"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>


        <!-- 数量 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/number_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/product_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_account_number"
                android:inputType="number"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>


        <!-- 金额 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/total_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/product_total"
                style="@style/EditorTextReadOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_account_total"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>


        <!-- 类型 -->
        <RadioGroup
            android:id="@+id/accountTypeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="">

            <RadioButton
                android:id="@+id/accountTypeRadioSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:checked="true"
                android:text="销售清单"></RadioButton>

            <RadioButton
                android:id="@+id/accountTypeRadioPub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="进货清单"></RadioButton>

        </RadioGroup>


        <Button
            android:id="@+id/product_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="添加" />

    </LinearLayout>


</RelativeLayout>
